--- a/app/src/main/res/layout/fragment_add_drink.xml
+++ b/app/src/main/res/layout/fragment_add_drink.xml
@@ -129,16 +129,16 @@
         android:id="@+id/addData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editMilk"
+        android:layout_below="@+id/favoriteCheckBox"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="251dp"
         android:layout_marginLeft="250dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:text="Add Drink" />
 
     <Button
@@ -156,5 +156,18 @@
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
         android:text="Clear Database" />
+
+    <CheckBox
+        android:id="@+id/favoriteCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editMilk"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="265dp"
+        android:layout_marginLeft="265dp"
+        android:layout_marginTop="26dp"
+        android:background="#FA6B6B"
+        android:text="Favorite" />
 
 </RelativeLayout>
