--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,11 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/drinkLabel3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginBottom="10dp"
+        android:text="Drink Name"
+        app:layout_constraintBottom_toTopOf="@+id/searchListView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/milkLabel3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="Milk (ml)"
+        app:layout_constraintBottom_toTopOf="@+id/searchListView"
+        app:layout_constraintStart_toEndOf="@+id/waterLabel3" />
+
+    <TextView
+        android:id="@+id/coffeeLabel3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="Coffee (ml)"
+        app:layout_constraintBottom_toTopOf="@+id/searchListView"
+        app:layout_constraintStart_toEndOf="@+id/drinkLabel3" />
+
+    <TextView
+        android:id="@+id/waterLabel3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="Water (ml)"
+        app:layout_constraintBottom_toTopOf="@+id/searchListView"
+        app:layout_constraintStart_toEndOf="@+id/coffeeLabel3" />
+
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="347dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="348dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="15dp"
+        android:background="#D7D7D7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,7 +63,7 @@
         android:id="@+id/searchListView"
         android:layout_width="406dp"
         android:layout_height="622dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
