--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,13 +19,8 @@
 
         <item
             android:id="@+id/nav_favorites"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_favorites_icon"
             android:title="@string/menu_favorites" />
-
-        <item
-            android:id="@+id/nav_history"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_history" />
     </group>
 
 </menu>
